<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_frag" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/server_host"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/serverHost" android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/host"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/server_port"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/serverPort"
                    tools:layout_editor_absoluteY="338dp" tools:layout_editor_absoluteX="-288dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/port"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/user" android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/password" android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordIn"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                    android:text="@string/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/firstName" android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fName"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                    android:text="@string/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lastName" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lName"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                    android:text="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/email" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailIn"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                    android:text="@string/gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/gender" android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <RadioGroup
                    android:layout_width="291dp"
                    android:layout_height="42dp"
                    android:orientation="horizontal" android:id="@+id/genderGroup">


                <RadioButton
                        android:text="@string/male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/male" android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" android:clickable="true"/>
                <RadioButton
                        android:text="@string/female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/female" android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" android:clickable="true"/>
            </RadioGroup>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signIn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.227"
                    android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"/>

            <Button
                    android:text="@string/register"
                    android:layout_width="211dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="0.683" android:clickable="true"
                    style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>