<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="226dp"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="55dp"
                  android:contentDescription="@string/person_first_name"
                  android:id="@+id/display_first_name"
                  android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/fname_label3" android:text="@string/person_first_name" android:singleLine="false"
                  android:textStyle="bold"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="55dp"
                  android:contentDescription="@string/person_first_name"
                  android:id="@+id/display_last_name"
                  android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/fname_label2" android:text="@string/person_last_name" android:singleLine="false"
                  android:textStyle="bold"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="55dp"
                  android:contentDescription="@string/person_first_name"
                  android:id="@+id/display_gender" android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/fname_label" android:text="@string/person_gender" android:singleLine="false"
                  android:textStyle="bold"/>


    </LinearLayout>

    <ExpandableListView android:layout_width="match_parent" android:layout_height="389dp"
                        android:layout_alignParentBottom="true" android:layout_marginBottom="0dp"
                        android:id="@+id/expandableListView">


    </ExpandableListView>


</RelativeLayout>